[gd_scene load_steps=6 format=3 uid="uid://dlhdwvrqfy7nm"]

[ext_resource type="Texture2D" uid="uid://cnwdhj6x7i6x" path="res://filled-circle.png" id="1_0h6qj"]
[ext_resource type="Script" path="res://ball.gd" id="1_u1nmc"]
[ext_resource type="PackedScene" uid="uid://dgnclskiuw74l" path="res://ghost_ball_sprite.tscn" id="2_61g4d"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_bntof"]
friction = 100.0
rough = true
bounce = 10.0

[sub_resource type="CircleShape2D" id="CircleShape2D_qstf2"]
radius = 16.0312

[node name="Ball" type="RigidBody2D" groups=["balls"]]
input_pickable = true
physics_material_override = SubResource("PhysicsMaterial_bntof")
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("1_u1nmc")
ghost_ball_scene = ExtResource("2_61g4d")

[node name="image" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_0h6qj")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="Shape" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_qstf2")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
